--- a/templates/dogs.html
+++ b/templates/dogs.html
@@ -6,23 +6,29 @@
 </div>
 <div class="section white">
     <div class="row container">
-        {% for dog in dogs %}
-        <div class="col s3">
-            <div class="card">
-                <span class="card-title">{{dog.dog_name}}</span>
-                <div class="card-image">
-                    <i class="material-icons card-icon">pets</i>
-                    <a value="stores" class="btn-floating btn-large halfway-fab waves-effect waves-light red pulse account-type"><i class="material-icons">add</i></a>
-                    <a value="stores" class="btn-floating btn-large halfway-fab waves-effect waves-light green pulse account-type"><i class="material-icons">add</i></a>
-
+        <div class="row card-row-dogs">
+            {% for dog in dogs %}
+                <div class="card row">
+                    <div class="col s3">
+                        <span class="card-title">{{dog.dog_name}}</span>
+                        <div class="card-image">
+                            <i class="material-icons card-icon">pets</i>
+                        </div>
+                        <p class="card-breed">{{dog.dog_breed}}</h5>
+                    </div>
+                    <div class="col s2 buttons-row">
+                        <a class="btn-floating btn-large waves-effect waves-light pulse center dogs_buttons"><i class="material-icons">add</i></a>
+                        <a class="btn-floating btn-large waves-effect waves-light pulse center dogs_buttons"><i class="material-icons">add</i></a>
+                    </div>
+                    <div class="col s7">
+                        <div class="card-content">
+                            <p class="card-breed">{{dog.dog_breed}}</h5>
+                            <p class="truncate">{{dog.dog_description}}</p>
+                        </div>
+                    </div>
                 </div>
-                <div class="card-content">
-                    <h5>{{dog.dog_breed}}</h5>
-                    <p>{{dog.dog_description}}</p>
-                </div>
-            </div>
+            {% endfor %}
         </div>
-        {% endfor %}
     </div>
 </div>  
 
