updated cards and links

--- a/templates/base.html
+++ b/templates/base.html
@@ -16,7 +16,7 @@
                     <a href="#" data-activates="mobile-menu" class="button-collapse"><i class="material-icons menu-icon">menu</i></a>
                     <ul id="nav-mobile" class="hide-on-med-and-down">
                         <li><a href="{{url_for('user_home')}}">Home</a></li>
-                        <li><a href="{{url_for('user_home')}}">Adoption</a></li>
+                        <li><a href="{{url_for('get_dogs')}}">Adoption</a></li>
                         <li><a href="{{url_for('user_home')}}">Training</a></li>
                         <li><a href="{{url_for('user_home')}}">Stores</a></li>
                         
@@ -24,7 +24,7 @@
                     </ul>
                     <ul class="side-nav" id="mobile-menu">
                         <li><a href="{{url_for('user_home')}}">Home</a></li>
-                        <li><a href="{{url_for('user_home')}}">Adoption</a></li>
+                        <li><a href="{{url_for('get_dogs')}}">Adoption</a></li>
                         <li><a href="{{url_for('user_home')}}">Training</a></li>
                         <li><a href="{{url_for('user_home')}}">Stores</a></li>          
                     </ul>
