Changed element for card titles

--- a/templates/register.html
+++ b/templates/register.html
@@ -11,7 +11,7 @@
         <div class="row card-row-register">
             <div class="col s3">
                 <div class="card">
-                    <span class="card-title">Dogs</span>
+                    <p class="card-title">Dogs</p>
                     <div class="card-image">
                         <i class="material-icons card-icon">pets</i>
                         <a value="dogs" class="btn-floating btn-large halfway-fab waves-effect waves-light red pulse account-type"><i class="material-icons">add</i></a>
@@ -23,7 +23,7 @@
             </div>
             <div class="col s3">
                 <div class="card">
-                    <span class="card-title">User</span>
+                    <p class="card-title">User</p>
                     <div class="card-image">
                         <i class="material-icons card-icon">person</i>     
                         <a value="users" class="btn-floating btn-large halfway-fab waves-effect waves-light red pulse account-type"><i class="material-icons">add</i></a>
@@ -35,7 +35,7 @@
             </div>
             <div class="col s3">
                 <div class="card">
-                    <span class="card-title">Services</span>
+                    <p class="card-title">Services</p>
                     <div class="card-image">
                         <i class="material-icons card-icon">supervisor_account</i>  
                         <a value="services" class="btn-floating btn-large halfway-fab waves-effect waves-light red pulse account-type"><i class="material-icons">add</i></a>
@@ -47,7 +47,7 @@
             </div>
             <div class="col s3">
                 <div class="card">
-                    <span class="card-title">Stores</span>
+                    <p class="card-title">Stores</p>
                     <div class="card-image">
                         <i class="material-icons card-icon">shopping_cart</i>
                         <a value="stores" class="btn-floating btn-large halfway-fab waves-effect waves-light red pulse account-type"><i class="material-icons">add</i></a>
