--- a/templates/dogs.html
+++ b/templates/dogs.html
@@ -6,23 +6,36 @@
 </div>
 <div class="section white">
     <div class="row container">
-        <div class="row card-row-dogs">
+        <div class="row card-row-find">
             {% for dog in dogs %}
-                <div class="card row">
+                <div class="card row find-row">
                     <div class="col s3">
-                        <span class="card-title">{{dog.dog_name}}</span>
+                        <p class="card-title">{{dog.dog_name}}</p>
                         <div class="card-image">
                             <i class="material-icons card-icon">pets</i>
                         </div>
                         <p class="card-breed">{{dog.dog_breed}}</h5>
                     </div>
                     <div class="col s2 buttons-row">
-                        <a class="btn-floating btn-large waves-effect waves-light pulse center dogs_buttons"><i class="material-icons">add</i></a>
-                        <a class="btn-floating btn-large waves-effect waves-light pulse center dogs_buttons"><i class="material-icons">add</i></a>
+                        <a href="#" class="waves-effect waves-light btn action-button-card">
+                            <i class="material-icons right action-button-card-icon">favorite</i>
+                            <span>Adopt</span>
+                        </a>
+                        <a href="#" class="waves-effect waves-light btn action-button-card">
+                            <i class="material-icons right action-button-card-icon">edit</i>
+                            <span>Edit</span>
+                        </a>
+                        <a href="#" class="waves-effect waves-light btn action-button-card">
+                            <i class="material-icons right action-button-card-icon">delete</i>
+                            <span>Delete</span>
+
+                        </a>
+                        <!-- <a class="btn-floating btn-large waves-effect waves-light pulse center cards_buttons"><i class="material-icons">clear</i></a>
+                        <a class="btn-floating btn-large waves-effect waves-light pulse center cards_buttons"><i class="material-icons">edit</i></a> -->
                     </div>
                     <div class="col s7">
                         <div class="card-content">
-                            <p class="card-breed">{{dog.dog_breed}}</h5>
+                            <p class="card-content-title">Description</h5>
                             <p class="truncate">{{dog.dog_description}}</p>
                         </div>
                     </div>
