Fixed typos on dogs.html

--- a/templates/dogs.html
+++ b/templates/dogs.html
@@ -14,7 +14,7 @@
                         <div class="card-image">
                             <i class="material-icons card-icon">pets</i>
                         </div>
-                        <p class="card-breed">{{dog.dog_breed}}</h5>
+                        <p class="card-breed">{{dog.dog_breed}}</p>
                     </div>
                     <div class="col s2 buttons-row">
                         <a href="#" class="waves-effect waves-light btn action-button-card">
@@ -28,14 +28,11 @@
                         <a href="#" class="waves-effect waves-light btn action-button-card">
                             <i class="material-icons right action-button-card-icon">delete</i>
                             <span>Delete</span>
-
                         </a>
-                        <!-- <a class="btn-floating btn-large waves-effect waves-light pulse center cards_buttons"><i class="material-icons">clear</i></a>
-                        <a class="btn-floating btn-large waves-effect waves-light pulse center cards_buttons"><i class="material-icons">edit</i></a> -->
                     </div>
                     <div class="col s7">
                         <div class="card-content">
-                            <p class="card-content-title">Description</h5>
+                            <p class="card-content-title">Description</p>
                             <p class="truncate">{{dog.dog_description}}</p>
                         </div>
                     </div>
