--- a/templates/users.html
+++ b/templates/users.html
@@ -8,21 +8,30 @@
     <div class="row container">
         <div class="row card-row-find">
             {% for user in users %}
-                <div class="card row">
+                <div class="card row find-row">
                     <div class="col s3">
-                        <span class="card-title">{{user.firs_name}} {{user.last_name}}</span>
+                        <p class="card-title">{{user.first_name}} {{user.last_name}}</p>
                         <div class="card-image">
                             <i class="material-icons card-icon">person</i>
                         </div>
                     </div>
                     <div class="col s2 buttons-row">
-                        <a class="btn-floating btn-large waves-effect waves-light pulse center dogs_buttons"><i class="material-icons">add</i></a>
-                        <a class="btn-floating btn-large waves-effect waves-light pulse center dogs_buttons"><i class="material-icons">add</i></a>
+                        <a href="#" class="waves-effect waves-light btn action-button-card">
+                            <i class="material-icons right action-button-card-icon">edit</i>
+                            <span>Edit</span>
+                        </a>
+                        <a href="#" class="waves-effect waves-light btn action-button-card">
+                            <i class="material-icons right action-button-card-icon">delete</i>
+                            <span>Delete</span>
+                        </a>
                     </div>
                     <div class="col s7">
                         <div class="card-content">
-                            <p class="card-breed">{{dog.dog_breed}}</p>
-                            <p class="truncate">{{dog.dog_description}}</p>
+                            {% if user.is_staff == 'on' %}
+                                <h4>STAFF</h4>
+                            {% endif %}
+                            <p class="card-content-title">Description</p>
+                            <p class="truncate">{{user.user_description}}</p>
                         </div>
                     </div>
                 </div>
