updated links for get_services

--- a/templates/base.html
+++ b/templates/base.html
@@ -17,7 +17,7 @@
                     <ul id="nav-mobile" class="hide-on-med-and-down">
                         <li><a href="{{url_for('user_home')}}">Home</a></li>
                         <li><a href="{{url_for('get_dogs')}}">Adoption</a></li>
-                        <li><a href="{{url_for('user_home')}}">Training</a></li>
+                        <li><a href="{{url_for('get_services')}}">Training</a></li>
                         <li><a href="{{url_for('user_home')}}">Stores</a></li>
                         
                         
@@ -25,7 +25,7 @@
                     <ul class="side-nav" id="mobile-menu">
                         <li><a href="{{url_for('user_home')}}">Home</a></li>
                         <li><a href="{{url_for('get_dogs')}}">Adoption</a></li>
-                        <li><a href="{{url_for('user_home')}}">Training</a></li>
+                        <li><a href="{{url_for('get_services')}}">Training</a></li>
                         <li><a href="{{url_for('user_home')}}">Stores</a></li>          
                     </ul>
                 </div>
