added route and links to services

--- a/templates/user_home.html
+++ b/templates/user_home.html
@@ -25,7 +25,7 @@
         <p>We have a great pool of certified professionals that can help you reaching your goals and even more. Most options will offer you different levels of training, 
         depending on how you and your dog are communicating.</p>
         <p>One-on-one or group sessions are available all year around.</p>
-        <h4>Visit our <a href="#" >PAWER Training</a> page</h4>
+        <h4>Visit our <a href="{{url_for('get_services')}}" >PAWER Training</a> page</h4>
     </div>
 </div>  
 <div class="parallax-container">
