Updated links for find stores

--- a/templates/base.html
+++ b/templates/base.html
@@ -18,7 +18,7 @@
                         <li><a href="{{url_for('user_home')}}">Home</a></li>
                         <li><a href="{{url_for('get_dogs')}}">Adoption</a></li>
                         <li><a href="{{url_for('get_services')}}">Training</a></li>
-                        <li><a href="{{url_for('user_home')}}">Stores</a></li>
+                        <li><a href="{{url_for('get_stores')}}">Stores</a></li>
                         
                         
                     </ul>
@@ -26,7 +26,7 @@
                         <li><a href="{{url_for('user_home')}}">Home</a></li>
                         <li><a href="{{url_for('get_dogs')}}">Adoption</a></li>
                         <li><a href="{{url_for('get_services')}}">Training</a></li>
-                        <li><a href="{{url_for('user_home')}}">Stores</a></li>          
+                        <li><a href="{{url_for('get_stores')}}">Stores</a></li>          
                     </ul>
                 </div>
                 <div class="col s4 logo-box">
