Updated links for stores on user_home

--- a/templates/user_home.html
+++ b/templates/user_home.html
@@ -38,7 +38,7 @@
         <p>Go through a variety of shops that offer as many options of products as you can dare to imagine!</p>
         <p>The staff in store are looking forward to help you finding whar you're looking for and guide you to the best choices.</p>
         <p>If you prefer to buy online, some stores offer you live chat for support in real time.</p>
-        <h4>Visit our <a href="#" >PAWER Shops</a> page</h4>
+        <h4>Visit our <a href="{{url_for('get_stores')}}" >PAWER Shops</a> page</h4>
     </div>
 </div>  
 {% endblock %}
