--- a/templates/stores.html
+++ b/templates/stores.html
@@ -1,10 +1,41 @@
 
 {% extends 'base.html' %}
 {% block content %}
-
-<h3>Pawer Stores</h3>
-
-<p>TEST</p>
-
+<div class="parallax-container">
+    <div class="parallax"><img src="/static/images/pup_deck.jpg"></div>
+</div>
+<div class="section white">
+    <div class="row container">
+        <div class="row card-row-find">
+            {% for store in stores %}
+                <div class="card row find-row">
+                    <div class="col s3">
+                        <p class="card-title">{{store.store_name}}</p>
+                        <div class="card-image">
+                            <i class="material-icons card-icon">shopping_cart</i>
+                        </div>
+                    </div>
+                    <div class="col s2 buttons-row">
+                        <a href="#" class="waves-effect waves-light btn action-button-card">
+                            <i class="material-icons right action-button-card-icon">edit</i>
+                            <span>Edit</span>
+                        </a>
+                        <a href="#" class="waves-effect waves-light btn action-button-card">
+                            <i class="material-icons right action-button-card-icon">delete</i>
+                            <span>Delete</span>
+                        </a>
+                    </div>
+                    <div class="col s7">
+                        <div class="card-content">
+                            <p class="card-content-title">Description</p>
+                            <p>Address: {{store.store_address}}</p>
+                            <p class="truncate">{{store.store_description}}</p>
+                        </div>
+                    </div>
+                </div>
+            {% endfor %}
+        </div>
+    </div>
+</div>  
 
 {% endblock %}
