Added password and email to all forms but dogs

--- a/templates/register.html
+++ b/templates/register.html
@@ -143,6 +143,12 @@
                         </div>
                     </div>
                     <div class="row">
+                        <div class="input-field col s12">
+                            <input id="password" name="password" type="password" class="validate">
+                            <label for="password">Password</label>
+                        </div>
+                    </div>
+                    <div class="row">
                         <div class="input-field col s6">
                             <input id="type_of_service" name="type_of_service" type="text" class="validate" required>
                             <label for="first_name">Type of service</label>
@@ -177,6 +183,18 @@
                         <div class="input-field col s6">
                             <input id="store_address" name="store_address" type="text" class="validate" required>
                             <label for="store_addres">Store Address</label>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="input-field col s12">
+                            <input id="service_email" name="service_email" type="email" class="validate">
+                            <label for="service_email">Email</label>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="input-field col s12">
+                            <input id="password" name="password" type="password" class="validate">
+                            <label for="password">Password</label>
                         </div>
                     </div>
                     <div class="row">
