--- a/templates/base.html
+++ b/templates/base.html
@@ -18,15 +18,13 @@
                         <li><a href="{{url_for('user_home')}}">Home</a></li>
                         <li><a href="{{url_for('get_dogs')}}">Adoption</a></li>
                         <li><a href="{{url_for('get_services')}}">Training</a></li>
-                        <li><a href="{{url_for('get_stores')}}">Stores</a></li>
-                        
-                        
+                        <li><a href="{{url_for('get_stores')}}">Stores</a></li>                
                     </ul>
                     <ul class="side-nav" id="mobile-menu">
                         <li><a href="{{url_for('user_home')}}">Home</a></li>
                         <li><a href="{{url_for('get_dogs')}}">Adoption</a></li>
                         <li><a href="{{url_for('get_services')}}">Training</a></li>
-                        <li><a href="{{url_for('get_stores')}}">Stores</a></li>          
+                        <li><a href="{{url_for('get_stores')}}">Stores</a></li> 
                     </ul>
                 </div>
                 <div class="col s4 logo-box">
@@ -40,6 +38,7 @@
                 </div>
                 <div class="col s4 register-box">
                     <a href="{{url_for('register')}}" class="btn waves-effect general-text register-button">Register</a>
+                    <a href="{{url_for('user_login')}}" class="btn waves-effect general-text register-button">Login</a>
                 </div>
                 
 			</div>
