--- a/static/css/style.scss
+++ b/static/css/style.scss
@@ -131,6 +131,8 @@ nav {
         color: $black-color;
         font-weight: 700;
         margin: auto;
+        padding: 0;
+        width: 35%;
     }
 
 }
@@ -220,7 +222,15 @@ nav {
     }
 }
 
-// dogs
+// Login.html
+
+.login-radio{
+    label{
+        margin: 1rem;
+        font-size: 1.5rem;
+        font-weight: 700;
+    }
+}
 
 
 
