--- a/templates/register.html
+++ b/templates/register.html
@@ -58,6 +58,9 @@
                 </div>
             </div>
         </div>
+        {%if dog==True%}
+            <h2>This dog is already in the database!</h2>
+        {% endif %}
         <div class="row">
             <div class="row hide" id="dogs">
                 <form action="{{ url_for('insert_dog') }}" method="POST" class="col s12">
@@ -104,8 +107,8 @@
                     </div>
                     <div class="row">
                         <div class="input-field col s12">
-                            <input id="user_email" name="user_email" type="email" class="validate">
-                            <label for="user_email">Email</label>
+                            <input id="_email" name="_email" type="email" class="validate">
+                            <label for="_email">Email</label>
                         </div>
                     </div>
                     <div class="row">
@@ -162,8 +165,8 @@
                     </div>
                     <div class="row">
                         <div class="input-field col s12">
-                            <input id="service_email" name="service_email" type="email" class="validate">
-                            <label for="service_email">Email</label>
+                            <input id="_email" name="_email" type="email" class="validate">
+                            <label for="_email">Email</label>
                         </div>
                     </div>
                     <div class="row">
@@ -187,8 +190,8 @@
                     </div>
                     <div class="row">
                         <div class="input-field col s12">
-                            <input id="service_email" name="service_email" type="email" class="validate">
-                            <label for="service_email">Email</label>
+                            <input id="_email" name="_email" type="email" class="validate">
+                            <label for="_email">Email</label>
                         </div>
                     </div>
                     <div class="row">
